--- a/zbar-sample/src/main/res/layout/activity_main.xml
+++ b/zbar-sample/src/main/res/layout/activity_main.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <android.support.design.widget.AppBarLayout
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
+        android:layout_height="wrap_content"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </android.support.design.widget.AppBarLayout>
+            android:layout_height="wrap_content" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
-        <Button android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/simple_activity_sample"
-                android:onClick="launchSimpleActivity" />
-        <Button android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/simple_fragment_sample"
-                android:onClick="launchSimpleFragmentActivity" />
-        <Button android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/activity_sample"
-                android:onClick="launchFullActivity" />
-        <Button android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/fragment_sample"
-                android:onClick="launchFullFragmentActivity" />
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="launchSimpleActivity"
+            android:text="@string/simple_activity_sample" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="launchSimpleFragmentActivity"
+            android:text="@string/simple_fragment_sample" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="launchFullActivity"
+            android:text="@string/activity_sample" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="launchFullFragmentActivity"
+            android:text="@string/fragment_sample" />
     </LinearLayout>
 </LinearLayout>
